Issue #000 task: Filter collapsable

--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -237,10 +237,10 @@
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
-  font-size: 12px;
+  font-size: $base-block-space * 1.5 ;
   color: $white-color;
   margin: 0;
-  padding: 8px;
+  padding: $base-block-space;
   width: 160px;
   cursor: pointer;
   &:focus {
@@ -251,13 +251,13 @@
   }
 
   .sb-icon-sort {
-    height: 16px;
-    width: 16px;
+    height: $base-block-space * 2;
+    width: $base-block-space * 2;
   }
 
   .sb-icon-arrow-down {
-    height: 10px;
-    width: 10px;
+    height: $base-block-space * 1.25;
+    width: $base-block-space * 1.25;
   }
 
   &.rotate img {
